Mon May 14 17:39:30 BST 2007  Olly Betts <olly@survex.com>

	* queryparser/queryparser.lemony: Fix handling of partial queries.

Mon May 14 16:49:46 BST 2007  Olly Betts <olly@survex.com>

	* net/remoteconnection.cc: closesocket() seems to work equally as
	  well as CloseHandle() but it's what we use elsewhere and Charlie
	  thinks it's a better choice here too so use that instead.  Rename
	  the wrapper call from close_fd_or_handle() to close_fd_or_socket().
	  And mark close_fd_or_socket() as "inline" under UNIX, since it
	  should always be inlined.

Mon May 14 15:30:13 BST 2007  Olly Betts <olly@survex.com>

	* tests/api_anydb.cc: Add FIXME about moving wildquery1.

Mon May 14 15:21:59 BST 2007  Olly Betts <olly@survex.com>

	* bin/xapian-progsrv.cc: Improve comments.

Mon May 14 11:29:14 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* net/remoteconnection.cc: Deal with invalid parameter exceptions
	  on windows when closing file descriptors or handles.

Mon May 14 05:04:16 BST 2007  Olly Betts <olly@survex.com>

	* tests/api_anydb.cc: Fix wildquery1 to work with the new term
	  stemming scheme.

Sun May 13 19:15:17 BST 2007  Olly Betts <olly@survex.com>

	* include/xapian/unicode.h: Count control characters as whitespace
	  (which is certainly what we want for TAB, CR, LF, and FF).

Sun May 13 17:50:19 BST 2007  Olly Betts <olly@survex.com>

	* include/xapian/unicode.h: Add CONNECTOR_PUNCTUATION to is_wordchar()
	  - this category includes '_' and characters which fulfil similar
	  roles.
	* queryparser/queryparser.lemony,queryparser/termgenerator_internal.cc:
	  No longer need to special case '_'.
	* queryparser/queryparser.lemony: Test for Unicode "whitespace" rather
	  than just ASCII.

Sun May 13 04:43:37 BST 2007  Olly Betts <olly@survex.com>

	* queryparser/queryparser.lemony: Normalise Unicode characters used
	  for apostrophe to ASCII apostrophe.

Sun May 13 03:56:17 BST 2007  Olly Betts <olly@survex.com>
